# gql-next

./: .envrc  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  .verchew.ini  Makefile  README.md  gql.pth  pyproject.toml
examples/simple/: .gql.json  .pylintrc  bootstrap.py  client.py  requirements.txt  server.py  start-server.sh
examples/swapi/: .gql.json  usage_with_codec.py
gql/: cli.py  config.py  query_parser.py  query_parser_v2.py  renderer_dataclasses.py  utils_codegen.py  utils_schema.py
gql/clients/: asyncio.py  sync.py
gql/codec/: fast_register.py  register.py  transform.py
tests/: conftest.py  test_query_parser.py  test_query_parser_v2.py  test_renderer_dataclasses.py  test_utils_codegen.py
tests/_codec/: test_register.py  test_transform.py
